--- a/miniprogram/pages/trifle_one/trifle_one.wxss
+++ b/miniprogram/pages/trifle_one/trifle_one.wxss
@@ -1,12 +1,12 @@
 /* miniprogram/pages/trifle_one/trifle_one.wxss */
 page{
-  background-color:#ffaaa560;
+  background:rgba(255,170,165,0.4);
 }
 .body{
   margin: 12px;
 }
 .basic_comment{
-  background-color: #ffaaa565;
+  background: rgba(255,170,165,0.35);
   font-size: 14px;
   color: #666666;
   display: flex;
@@ -78,4 +78,9 @@ page{
   height: 180rpx;
   margin-right: 20rpx;
   border-radius: 5px;
+}
+.commit_button{
+  background-color: rgba(255,170,165,1);
+  color: white;
+  margin:20px 0px 20px 0px;
 }
